@@ -1,5 +1,6 @@
 Version 3.1.2 To be released
 ============================
+BUG: Ticket#636 - I18N catalogue problem (Christophe)
 BUG: Ticket#707 - TPropertyAccess sets property twice on object when using setters (Qiang)
 BUG: Ticket#719 - TAutoCompleter should not trigger Validation if CausesValidation=False (Christophe)
 BUG: Ticket#736 - Files never created in clientscript.php (Qiang)
